# VoxCAD

./: .gitignore  .gitmodules  .v3  CMakeLists.txt  README.md  VoxCAD.pri  VoxCAD.pro  VoxCad.pri  VoxCad.pro
QTUtils/: QOpenGL.cpp
VoxCad/: Dlg_Physics.cpp  Dlg_Physics.h  Dlg_VideoCapture.cpp  QVX_Interface.cpp  QVX_Interfaces.h  VoxCad.h  VoxCad.ui  vPhysics.ui
Voxelyze3/include/: TI_Utils.h
data/: 0-pre-damage-with-injure.vxa  post-damage.vxa  pre-damage.vxa  run_1  run_1.vxa  run_2  simple  simple.vxa
oldVoxelyze/: VXS_BondInternal.h  VX_Enums.h  VX_Environment.cpp  VX_Environment.h  VX_Object.cpp  VX_Object.h  VX_Sim.cpp
snap/: snapcraft.yaml
